--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ pygments: true
 #
 title : midaym
 tagline: Front-End Web Development blog
-author : Michael Miday
+author : 
   name : Michael Miday
   email : midaym@gmail.com
   github : hanakin
-  twitter : username
+  twitter : @midaym
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -26,7 +26,7 @@ author : Michael Miday
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://hanakin.github.com
+production_url : http://hanakin.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -82,8 +82,8 @@ JB :
   #
   comments :
     provider : disqus
-    disqus :
-      short_name : jekyllbootstrap
+    disqus : 
+      short_name : midaym
     livefyre :
       site_id : 123
     intensedebate :
